AI Assistant bar: fix positioning on mobile (#34476)
* wrap assistant bar to control positioning

* always make sure the assistant bar is placed AFTER the toolbar

* add changelog entry

--- a/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-bar/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-bar/style.scss
@@ -4,13 +4,14 @@
     &:not(.is-fixed) {
         position: relative;
         z-index: 30;
-
         margin-top: 10px;
-        background-color: white;
     }
 
     &.is-fixed {
-		border-bottom: 1px solid #e0e0e0;
+		.jetpack-components-ai-control__container-wrapper {
+			position: relative;
+			padding-bottom: 0;
+		}
 
 		.jetpack-components-ai-control__container {
 			border-radius: 0;
@@ -29,4 +30,14 @@
 	display: block;
 	position: sticky;
 	z-index: 31;
+
+	.jetpack-ai-assistant__bar-wrapper {
+		position: relative;
+	}
+}
+
+.jetpack-ai-assistant__bar-wrapper {
+	position: sticky;
+	bottom: 0;
+	z-index: 30;
 }
